fixed scrollbar css on kanban board

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -15,7 +15,7 @@
 }
 
 ::-webkit-scrollbar {
-  @apply w-0.5;
+  @apply h-2 w-0.5;
 }
 
 ::-webkit-scrollbar-:horizontal {
@@ -23,9 +23,9 @@
 }
 
 ::-webkit-scrollbar-thumb {
-  @apply bg-rose-800 rounded-xl;
+  @apply bg-[#4B49AB] h-1 rounded-full;
 }
 
 .task > ::-webkit-scrollbar-thumb {
-  @apply bg-stone-600 rounded-xl;
+  @apply bg-[#4B49AB] rounded-xl;
 }
